[package]
name = "mermer-rs"
description = "Implementation of the Stack-AND exact string matching algorithm."
repository = "https://github.com/Markstein-Lab/mermer-rs"
keywords = ["bioinformatics"]
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Jakob L. Kreuze <zerodaysfordays@sdf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bio = "0.30"
bio-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
